--- a/.github/workflows/nhentai_scrape_and_notify.yml
+++ b/.github/workflows/nhentai_scrape_and_notify.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Run scraper
       run: python nhentai/nhentai_scraper.py
 
-    - name: Run bot notification
-      env:
-        BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-        CHAT_ID: ${{ secrets.CHAT_ID }}
-      run: python nhentai/nhentai_bot.py
+    #- name: Run bot notification
+     # env:
+      #  BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+       # CHAT_ID: ${{ secrets.CHAT_ID }}
+     # run: python nhentai/nhentai_bot.py
