--- a/.github/workflows/nhentai_scrape_and_notify.yml
+++ b/.github/workflows/nhentai_scrape_and_notify.yml
@@ -3,7 +3,10 @@ name: Nhentai Scrape and Notify Telegram Bot
 on:
   schedule:
     - cron: '0 */6 * * *'   # every 6 hours
-  workflow_dispatch:         # allows manual trigger
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   scrape_and_notify:
@@ -24,8 +27,17 @@ jobs:
     - name: Run scraper
       run: python nhentai/nhentai_scraper.py
 
-    #- name: Run bot notification
-     # env:
-      #  BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-       # CHAT_ID: ${{ secrets.CHAT_ID }}
-     # run: python nhentai/nhentai_bot.py
+    - name: Run bot notification
+      env:
+        BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+        CHAT_ID: ${{ secrets.CHAT_ID }}
+      run: python nhentai/nhentai_bot.py
+
+    - name: Commit and push updated past.json
+      run: |
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "GitHub Actions Bot"
+        git add data/past.json
+        git diff --cached --quiet || (git commit -m "Update past.json after run" && git push)
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
