--- a/.github/workflows/reddit_api.yml
+++ b/.github/workflows/reddit_api.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: '*/30 * * * *'  # every 30 minutes
 
+permissions:
+  contents: write
+
 jobs:
   run-reddit-tracker:
     runs-on: ubuntu-latest
@@ -30,3 +33,12 @@ jobs:
 
       - name: Run Reddit tracker
         run: python reddit/reddit_bot.py
+
+      - name: Commit and push updated reddit_old.json
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions Bot"
+          git add reddit/data/reddit_old.json
+          git diff --cached --quiet || (git commit -m "Update reddit_old.json after run" && git push)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
