refactoring and improving code efficiency and I/O with removal of new.json

--- a/.github/workflows/nhentai_scrape_and_notify.yml
+++ b/.github/workflows/nhentai_scrape_and_notify.yml
@@ -24,16 +24,13 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    - name: Run scraper
-      run: python nhentai/nhentai_scraper.py
-
     - name: Run bot notification
       env:
         BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         CHAT_ID: ${{ secrets.CHAT_ID }}
       run: python nhentai/nhentai_bot.py
 
-    - name: Commit and push updated past.json
+    - name: Commit and push updated old.json
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions Bot"
