--- a/.github/workflows/nhentai_scrape_and_notify.yml
+++ b/.github/workflows/nhentai_scrape_and_notify.yml
@@ -22,7 +22,13 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        pip install -r requirements.txt
+        # ensure chromedriver is installed if using webdriver-manager
+        pip install webdriver-manager selenium cloudscraper
+
+    - name: Install Chromium for Selenium headless
+      run: sudo apt-get update && sudo apt-get install -y chromium-browser
 
     - name: Run bot notification
       env:
