--- a/.github/workflows/hocean_scrape.yml
+++ b/.github/workflows/hocean_scrape.yml
@@ -1,8 +1,8 @@
-name: hocean scrape
+name: HentaiOcean Scrape and Notify Telegram Bot
 
 on:
   schedule:
-    - cron: '0 6 * * *'
+    - cron: '0 */6 * * *'   # every 6 hours
   workflow_dispatch:
 
 permissions:
